--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #fdfd96; /* A light uplifting yellow */
+    background-color: #264653; /* Deep blue-green */
     color: #333333;
     line-height: 1.6;
 }
@@ -13,12 +13,12 @@ body {
 
 h1 {
     text-align: center;
-    color: #6b8e23; /* Olive green for positivity */
+    color: #2A9D8F; /* Greenish-blue */
 }
 
 h4 {
     text-align: center;
-    color: #3f5d00; /*Darker Olive green for positivity */
+    color: #E9C46A; /* Sandy yellow */
 }
 
 form {
@@ -46,8 +46,8 @@ input[type='range']::-webkit-slider-thumb {
     appearance: none;
     width: 20px;
     height: 20px;
-    background-color: #ffffff; /* Customize thumb color */
-    border: 2px solid #000000; /* Customize thumb border */
+    background-color: #E76F51; /* Burnt orange for the slider thumb */
+    border: none; /* Removing border */
     border-radius: 50%;
     cursor: pointer;
 }
@@ -71,7 +71,7 @@ input[type='range']::-webkit-slider-thumb {
     border: none;
     height: 1px;
     margin-bottom: 15px;
-    background-color: #ccc; /* Divider color */
+    background-color: #264653; /* Dark blue for the divider */
 }
 
 input[type='number'] {
@@ -84,7 +84,7 @@ input[type='submit'] {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #9acd32; /* A cheerful green */
+    background-color: #2A9D8F; /* Greenish-blue */
     color: white;
     border: none;
     border-radius: 5px;
@@ -92,5 +92,5 @@ input[type='submit'] {
 }
 
 input[type='submit']:hover {
-    background-color: #7fbf00; /* A darker green for contrast on hover */
+    background-color: #264653; /* Dark blue for contrast on hover */
 }
