--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="{{ url_for('static', filename='images/header_2.png') }}" alt="Header Image">
+        <img src="{{ url_for('static', filename='images/header_2.png') }}" alt="Header Image", style="width: 100%; height: auto;">
     <div class="container">
         <h1>Welcome to the Happiness Predictor</h1>
         <h4>Please rate the following aspects of your life on a scale of 1 to 10, where 1 indicates the least satisfaction and 10 indicates the utmost satisfaction:</h4>
